--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 *.csproj
 *.csproj.Debug.cachefile
 *.contentproj
+*.config
 
 # Build results
 [Dd]ebug/
@@ -36,3 +37,4 @@
 *.vspscc
 .builds
 *.dotCover
+*.cacheFile
