screen width and height now determined by config

--- a/7Wonders/7Wonders/7WondersContent/Json/config.json
+++ b/7Wonders/7Wonders/7WondersContent/Json/config.json
@@ -3,5 +3,7 @@
 	"clientport": 4320,
     "localhost" : "127.0.0.1",
     "tag" : "7Wonders",
-	"discoverywait" : 1000
+	"discoverywait" : 1000,
+	"screenWidth": 1024,
+	"screenHeight": 768
 }
